--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
-    "mongoose": "^6.6.5",
+    "heroku": "^7.66.2",
+    "mongoose": "^6.7.2",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
