--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "mongoose": "^6.7.2",
+    "netlify": "^13.0.1",
     "prettier": "^2.7.1"
   },
   "devDependencies": {
