--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "express": "^4.17.1",
     "mongoose": "^6.7.2",
     "netlify": "^13.0.1",
-    "prettier": "^2.7.1"
+    "prettier": "^2.7.1",
+    "serverless-http": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.20"
